fix searchbar height on mobile

--- a/src/components/home/HomePage.css
+++ b/src/components/home/HomePage.css
@@ -1,6 +1,6 @@
 #homepage {
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   background-color: #b8d7ec;
   background-image: url('../../assets/images/photos/homepage/gilian-mask.webp');
   background-repeat: no-repeat;
