--- a/src/components/navigation/Menu.css
+++ b/src/components/navigation/Menu.css
@@ -1,6 +1,7 @@
 header {
   width: 100vw;
   height: 90px;
+  z-index: 99;
 }
 nav ul {
   list-style-type: none; /* supprime les puces de la liste */
